add hamburger menu for responsiveness

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <p>Student at JNTUH</p>
   </header>
   
+  <div class="mobile-menu-icon">
+    <div class="bar">a</div>
+    <div class="bar">b</div>
+    <div class="bar">c</div>
+  </div>
   <nav>
     <ul>
       <li><a href="#about">About Me</a></li>
